[project]
name = "ngdb"
version = "0.10.0"
description = "Norton Guide database reading library"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "typing-extensions",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
keywords = [
    "library",
    "dbase",
    "clipper",
    "norton guide reader",
    "documentation",
    "database",
    "help",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://blog.davep.org/ngdb.py/"
Repository = "https://github.com/davep/ngdb.py"
Documentation = "https://blog.davep.org/ngdb.py/"
Source = "https://github.com/davep/ngdb.py"
Issues = "https://github.com/davep/ngdb.py/issues"
Discussions = "https://github.com/davep/ngdb.py/discussions"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "mkdocstrings[python]>=0.28.2",
    "mkdocs-material>=9.6.5",
    "mkdocs-autorefs>=1.4.0",
    "ruff>=0.9.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ngdb"]
