[project]
name = "ngdb"
version = "1.2.0"
description = "Norton Guide database reading library"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "typing-extensions",
]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = [
    "library",
    "dbase",
    "clipper",
    "norton guide reader",
    "documentation",
    "database",
    "help",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://ngdb.davep.dev/"
Repository = "https://github.com/davep/ngdb.py"
Documentation = "https://ngdb.davep.dev/"
Source = "https://github.com/davep/ngdb.py"
Issues = "https://github.com/davep/ngdb.py/issues"
Discussions = "https://github.com/davep/ngdb.py/discussions"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "mkdocstrings[python]>=0.28.2",
    "mkdocs-material>=9.6.5",
    "mkdocs-autorefs>=1.4.0",
    "ruff>=0.9.9",
    "codespell>=2.4.1",
    "pytest-cov>=7.0.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.coverage.report]
exclude_also = [
    "@abstractmethod",
    "def __repr__",
    "def __rich__",
]

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
