[metadata]
name = ngdb
description = Norton Guide database reading library
version = attr: ngdb.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/ngdb.py
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = library, dbase, clipper, norton guide reader
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/ngdb/blob/main/README.md
    Source = https://github.com/davep/ngdb
    Issues = https://github.com/davep/ngdb/issues
    Discussions = https://github.com/davep/ngdb/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    typing-extensions
python_requires = >=3.8

[options.package_data]
ngdb = py.typed

### setup.cfg ends here
